<resources>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Weather/Forecast</string>
    <string name="nav_header_subtitle">openweathermap.org</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_weather_forecast">Today Forecast</string>
    <string name="menu_about">About</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_search_city">Search City</string>

    <string name="home_title_weekly_forecast">Daily Forecast</string>
    <string name="home_error_message">Sorry, We have some problem!\n%s</string>
    <string name="label_city_name">City Name</string>
    <string name="label_not_found_city">Not Found City!</string>
    <string name="label_please_input_the_city">Please input the city</string>
    <string name="label_search_result_not_found_city">"Sorry, Not Found the City!"</string>
    <string name="label_loading_city_title">"Loading Cities"</string>
    <string name="label_loading_city_description">Please Wait</string>
    <string name="label_min_temp">min</string>
    <string name="label_max_temp">max</string>
    <string name="label_fahrenheit">Fahrenheit</string>
    <string name="label_celsius">Celsius</string>
    <string name="label_dialog_title_temperature">Select Temperature Unit</string>
    <string name="label_setting_updated">Setting Updated</string>
    <string name="humidity">Humidity</string>

</resources>