<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.myweatherforecastapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_nav_home_to_nav_search_city"
            app:destination="@id/nav_search_city"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim">

            <argument
                android:name="openScreen"
                app:argType="string" />
        </action>
    </fragment>

    <fragment
        android:id="@+id/nav_forecast"
        android:name="com.example.myweatherforecastapp.ui.weatherforecast.WeatherForecastFragment"
        android:label="@string/menu_weather_forecast"
        tools:layout="@layout/epoxy_weather_forecast_item">
        <action
            android:id="@+id/action_nav_forecast_to_nav_search_city"
            app:destination="@id/nav_search_city"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim">

            <argument
                android:name="openScreen"
                app:argType="string" />
        </action>
    </fragment>

    <fragment
        android:id="@+id/nav_about"
        android:name="com.example.myweatherforecastapp.ui.about.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.myweatherforecastapp.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

    <dialog
        android:id="@+id/nav_search_city"
        android:name="com.example.myweatherforecastapp.ui.bottomsheet.SearchCityBottomSheet"
        android:label="@string/menu_search_city"
        tools:layout="@layout/fragment_search_city_bottom_sheet_list_dialog">
        <argument
            android:name="openScreen"
            app:argType="string" />
        <action
            android:id="@+id/action_nav_search_city_to_nav_home"
            app:destination="@id/nav_home"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_nav_search_city_to_nav_forecast"
            app:destination="@id/nav_forecast"
            app:popUpToInclusive="true" />
    </dialog>

</navigation>